--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                         </div>
                         <div class="col-12 col-sm-6 col-lg-6 col-xl-3 col-xxl-3">
                             <div class="row">
-                                <div class="title__sales ">
+                                <div class="title__sales mt-5 mt-sm-0 mt-xl-0">
                                     <h4>Ventas</h4>
                                 </div>
                             </div>
